# nexus-sheets-api-

./: .env  .gitignore  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 014e91ed79fd_create_sheets_and_sheet_lines_tables.py  1260f1a89632_add_indexes_sheets_and_lines.py  34f21cc032c4_add_name_to_users.py  5716b431852e_add_cost_type_and_cost.py  5f12877b8946_add_cooperation_type_to_sheets.py  741f1a3d01ee_create_platforms_table.py  939b97256862_add_push_subscriptions.py  ac0c46c24582_add_goal_field_to_sheets.py  ad002ab1cd70_add_owner_id_to_users.py  d03831f8b7e8_drop_cost_columns_from_sheets.py  dada5ee85603_add_bonus_to_sheet_lines.py  dcf3f7994074_add_platform_id_to_sheets.py  f55df08e7476_create_activation_keys_table.py  f78889b5f02c_create_users_table.py
app/api/v1/: admin.py  auth.py  costs.py  dashboard.py  operators.py  platforms.py  push.py  sheets.py
app/auth/: dependencies.py
app/core/: config.py  database.py  security.py
app/models/: __init__.py  activation_key.py  cost.py  platform.py  push_subscription.py  sheet.py  user.py
app/repositories/: platform.py  sheet.py  user.py
app/schemas/: admin.py  cost.py  dashboard.py  operator.py  platform.py  sheet.py  user.py
app/services/: admin.py  auth.py  cost.py  dashboard.py  operator.py  platform.py  push.py  sheet.py
